some reduced boardset after #3300 merged

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,179 +40,13 @@ jobs:
         # aa: GH Actions orders the jobs by the first key value. 'aa' should be first. it never is. it is actually quite pointless trying. it's effectively random.
 
         include:
-          # regular CLI builds, build first
-          - aa: 0010
-            board: odroidhc4
-            desc: ODROID HC4, CLI, standard
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-          - aa: 0020
-            board: odroidn2
-            desc: ODROID N2+, CLI, standard
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-
-          - aa: 0021
-            board: radxa-zero
-            desc: Radxa Zero, CLI, standard
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-          - aa: 0022
-            board: jethubj80
-            desc: JetHub J80, CLI, standard
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-          - aa: 0023
-            board: jethubj100
-            desc: JetHub J100, CLI, standard
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-
-          - aa: 0030
-            board: khadas-vim3
-            desc: Khadas VIM3, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-
-          - aa: 0031
-            board: khadas-vim1
-            desc: Khadas VIM1, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-
-          - aa: 0032
-            board: khadas-vim2
-            desc: Khadas VIM2, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-
-          - aa: 0033
-            board: khadas-vim3l
-            desc: Khadas VIM3L, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-
-          - aa: 0034
-            board: lafrite
-            desc: lafrite, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-
-          - aa: 0035
-            board: lepotato
-            desc: lepotato, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-
-          - aa: 0036
-            board: odroidc2
-            desc: ODROID C2, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-
-          - aa: 0037
-            board: odroidc4
-            desc: ODROID C4, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-
-          - aa: 0038
-            board: nanopik2-s905
-            desc: nanopik2-s905, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no"
-
-          # cloud images build after regular cli
-          - aa: 0110
-            board: odroidhc4
-            desc: ODROID HC4, cloud image, user-data at /boot (ext4)
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=yes"
-          - aa: 0120
-            board: odroidn2
-            desc: ODROID N2+, cloud image, user-data at /boot (ext4)
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=yes"
-          - aa: 0130
-            board: khadas-vim3
-            desc: Khadas VIM3, cloud image, user-data at /boot (ext4)
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=yes"
-          - aa: 0140
-            board: oneplus5
-            desc: OnePlus 5, fastboot-compatible, cloud image, user-data at /boot
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-small-kernels
-            vars: "CLOUD_IMAGE=yes"
-          - aa: 0155
-            board: jethubj80
-            desc: JetHub J80, cloud image, user-data at /boot (ext4)
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=yes"
-          - aa: 0156
-            board: jethubj100
-            desc: JetHub J100, cloud image, user-data at /boot (ext4)
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=yes"
-
-          #then the rest.
-
-          - aa: 0850
-            board: uefi-x86-dual-root
-            desc: UEFI Generic x86 Dual Root/Rescue e2img, with -generic Ubuntu kernel, cloud image, user-data at /boot for each root
-            runnerLabel: can-build-x86
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=yes DUAL_ROOT_OUTPUT_E2IMG_ONLY=yes"
-            buildFirst: uefi-x86-rescue-rootfs # rescue is the second root, which contains a rootfs of the first.
-
-          # --------------------------------------------------------------------
-          - aa: 0010
-            board: uefi-arm64
-            desc: Debian SID - UEFI Generic ARM64, with -generic Debian kernel (current), regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=no BRANCH=current RELEASE=sid"
-
-          - aa: 0050
+          - aa: 050
             board: uefi-arm64-dual-root
             desc: UEFI Generic ARM64 Dual Root/Rescue e2img, with Armbian mainline kernel (edge), cloud image, user-data at /boot for each root
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=yes DUAL_ROOT_OUTPUT_E2IMG_ONLY=yes BRANCH=edge"
             buildFirst: uefi-arm64-rescue-rootfs # rescue is the second root, which contains a rootfs of the first.
-
-          - aa: 0060
-            board: uefi-arm64
-            desc: UEFI Generic ARM64, with Armbian mainline kernel (edge), regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0070
-            board: rpi4b
-            desc: Raspberry Pi 4B, with Armbian mainline kernel (edge), regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
 
           - aa: 0100
             board: uefi-x86-meta
@@ -221,27 +55,6 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=yes BRANCH=edge"
 
-          - aa: 0120
-            board: uefi-x86
-            desc: UEFI Generic x86, with Armbian mainline kernel (edge), regular CLI
-            runnerLabel: can-build-x86
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge"
-
-          - aa: 0130
-            board: rpi4b
-            desc: Raspberry Pi 4B, with Ubuntu's raspi kernel (current), regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=no BRANCH=current"
-
-          - aa: 0250
-            board: uefi-x86
-            desc: UEFI Generic x86, with -generic Ubuntu kernel (current), regular CLI
-            runnerLabel: can-build-x86
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=current"
-
           - aa: 0150
             board: uefi-x86-meta
             desc: UEFI Generic x86 cloud image, with -generic Ubuntu kernel (current), for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
@@ -249,28 +62,62 @@ jobs:
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=yes BRANCH=current"
 
-          - aa: 0350
+          - aa: 0200
             board: rpi4b
             desc: Raspberry Pi 4B, with Armbian mainline kernel (edge), cloud image, user-data at /boot/firmware (FAT)
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=yes BRANCH=edge"
 
-          - aa: 0450
+          - aa: 0210
             board: rpi4b
             desc: Raspberry Pi 4B, using Ubuntu's raspi kernel (current), cloud image, user-data at /boot/firmware (FAT)
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=yes BRANCH=current"
 
-          - aa: 0720
-            board: uefi-arm64
-            desc: UEFI Generic ARM64, with -generic Ubuntu kernel (current), cloud image, user-data at /boot/efi (FAT)
+          - aa: 0300
+            board: uefi-arm64-meta
+            desc: UEFI Generic ARM64, with -generic Ubuntu kernel (current), cloud image for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=yes BRANCH=current"
 
-          - aa: 0740
+          - aa: 0310
+            board: uefi-x86
+            desc: UEFI Generic x86, with -generic Ubuntu kernel (current), cloud image, user-data at /boot/efi (FAT)
+            runnerLabel: can-build-x86
+            runnerLabelKernel: can-build-rootfs-only
+            vars: "CLOUD_IMAGE=yes ENABLE_EXTENSIONS=image-output-ovf BRANCH=current"
+
+          - aa: 0320
+            board: uefi-x86
+            desc: UEFI Generic x86, with Armbian mainline kernel (edge), cloud image, user-data at /boot/efi (FAT)
+            runnerLabel: can-build-x86
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=yes ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge"
+
+          # cloud images for meson 64
+          - aa: 0500
+            board: odroidhc4
+            desc: ODROID HC4, cloud image, user-data at /boot (ext4)
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=yes"
+          - aa: 0550
+            board: odroidn2
+            desc: ODROID N2+, cloud image, user-data at /boot (ext4)
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=yes"
+          - aa: 0560
+            board: oneplus5
+            desc: OnePlus 5, fastboot-compatible, cloud image, user-data at /boot
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-small-kernels
+            vars: "CLOUD_IMAGE=yes"
+
+          - aa: 0700
             board: uefi-arm64-dual-root
             desc: UEFI Generic ARM64 Dual Root/Rescue e2img, with -generic Ubuntu kernel, cloud image, user-data at /boot for each root
             runnerLabel: can-build-arm64
@@ -278,42 +125,7 @@ jobs:
             vars: "CLOUD_IMAGE=yes DUAL_ROOT_OUTPUT_E2IMG_ONLY=yes BRANCH=current"
             buildFirst: uefi-arm64-rescue-rootfs # rescue is the second root, which contains a rootfs of the first.
 
-          - aa: 0750
-            board: uefi-arm64-meta
-            desc: UEFI Generic ARM64, with -generic Ubuntu kernel (current), cloud image for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=yes BRANCH=current"
 
-
-          - aa: 0820
-            board: uefi-x86
-            desc: UEFI Generic x86, with -generic Ubuntu kernel (current), cloud image, user-data at /boot/efi (FAT)
-            runnerLabel: can-build-x86
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=yes ENABLE_EXTENSIONS=image-output-ovf BRANCH=current"
-
-          - aa: 0830
-            board: uefi-x86
-            desc: UEFI Generic x86, with Armbian mainline kernel (edge), cloud image, user-data at /boot/efi (FAT)
-            runnerLabel: can-build-x86
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=yes ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge"
-
-          - aa: 0900
-            board: uefi-arm64
-            desc: UEFI Generic ARM64, with -generic Ubuntu kernel (current), regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=no BRANCH=current"
-
-
-          - aa: 0940
-            board: oneplus5
-            desc: OnePlus 5, fastboot-compatible, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-small-kernels
-            vars: "CLOUD_IMAGE=no"
 
     steps:
 
