--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,6 +97,20 @@ jobs:
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=yes BRANCH=current"
 
+          - aa: 0301
+            board: uefi-x86
+            desc: UEFI Generic x86, with -generic Ubuntu kernel (current), desktop xfce
+            runnerLabel: can-build-x86
+            runnerLabelKernel: can-build-rootfs-only
+            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=current BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+
+          - aa: 0302
+            board: uefi-x86
+            desc: UEFI Generic x86, with Armbian mainline kernel (edge), desktop
+            runnerLabel: can-build-x86
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+
           - aa: 0310
             board: uefi-x86
             desc: UEFI Generic x86, with -generic Ubuntu kernel (current), cloud image, user-data at /boot/efi (FAT)
