--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,21 @@ jobs:
         # aa: GH Actions orders the jobs by the first key value. 'aa' should be first. it never is. it is actually quite pointless trying. it's effectively random.
 
         include:
+          # non-cloud cli images for armhf stuff built on arm64
+          - aa: 0003
+            board: tinkerboard
+            desc: Tinkerboard, cli, edge
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
+
+          - aa: 0004
+            board: helios4
+            desc: Helios4, cli, edge
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
+
           # non-cloud desktop images for meson 64 HC4/N2
           - aa: 0010
             board: odroidhc4
